chapter 4 big chunk

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -8,6 +8,7 @@
 \newglossaryentry{CORBA}{name=CORBA,description={Common Object Request Broker Architecture}}
 \newglossaryentry{CRUD}{name=CRUD,description={Create, Read, Update, Delete}}
 \newglossaryentry{CSS}{name=CSS,description={Cascading Style Sheets}}
+\newglossaryentry{DAG}{name=DAG,description={Directed Acyclic Graph}}
 \newglossaryentry{DOM}{name=DOM,description={Document Object Model}}
 \newglossaryentry{DSL}{name=DSL,description={Domain-Specific Language}}
 \newglossaryentry{EIS}{name=EIS,description={Enterprise Information System}}
@@ -19,12 +20,14 @@
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
 \newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
 \newglossaryentry{Java EE}{name=Java EE,description={Java Platform, Enterprise Edition}}
+\newglossaryentry{JSR}{name=JSR,description={Java Specification Request}}
 \newglossaryentry{JPQL}{name=JPQL,description={Java Persistence Query Language}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
 \newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
+\newglossaryentry{NAT}{name=NAT,description={Native Address Translation}}
 \newglossaryentry{OMG}{name=OMG,description={Object Modeling Group}}
 \newglossaryentry{ORB}{name=ORB,description={Object Request Broker}}
 \newglossaryentry{OOP}{name=OOP,description={Object Oriented Programming}}
