--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -54,6 +54,7 @@ unicode=true,
 \usepackage{protobuf/style} % include custom style for proto declarations.
 \usepackage{tabularx}
 \usepackage{array}
+\usepackage{afterpage}
 
 \usepackage[style=long,acronym,nomain,numberedsection]{glossaries}
 \makeglossaries
@@ -184,7 +185,7 @@ basicstyle=\fontsize{10}{12}\selectfont\ttfamily
 \appendix
 
 \input{content/appendix-A-snimky}
-%\input{content/appendix-B-zdrojove-kody}
+\input{content/appendix-B-uzivatelska-prirucka}
 \input{content/appendix-C-zkratky}
 \input{content/appendix-D-cd}
 
