--- a/reference.bib
+++ b/reference.bib
@@ -702,3 +702,26 @@
     url = {https://www.ibm.com/support/knowledgecenter/en/SSZJPZ_11.3.0/com.ibm.swg.im.iis.conn.jrules.use.doc/topics/c_jrules_enginemode.html},
     urldate = {2018-04-23}
 }
+
+@article{bernard2009jsr,
+    title={JSR 303: Bean validation},
+    author={Bernard, Emmanuel and Peterson, Steve},
+    journal={Bean Validation Expert Group, March},
+    year={2009}
+}
+
+@book{scott2000programming,
+    title={Programming language pragmatics},
+    author={Scott, Michael Lee},
+    year={2000},
+    publisher={Morgan Kaufmann},
+    address = {Burlington, Massachusetts, USA},
+}
+
+@book{melichar2003jazyky,
+    title={Jazyky a p{\v{r}}eklady},
+    author={Melichar, Bo{\v{r}}ivoj},
+    year={2003},
+    publisher={Vydavatelstv{\'\i} {\v{C}}VUT},
+    address = {Praha, Česká republika},
+}
