chapter 4 first complete version

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -23,6 +23,7 @@
 \newglossaryentry{JSR}{name=JSR,description={Java Specification Request}}
 \newglossaryentry{JPQL}{name=JPQL,description={Java Persistence Query Language}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
+\newglossaryentry{KISS}{name=KISS,description={Keep it simple, stupid}}
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
 \newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
@@ -51,4 +52,5 @@
 \newglossaryentry{WSDL}{name=WSDL,description={Web Service Description Language}}
 \newglossaryentry{XML}{name=XML,description={Extensible Markup Language}}
 \newglossaryentry{XSD}{name=XSD,description={XML Schema Definition}}
+\newglossaryentry{YAGNI}{name=YAGNI,description={You aren't gonna need it}}
 \newglossaryentry{YAML}{name=YAML,description={YAML Ain't Markup Language}}
