--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -423,7 +423,7 @@ weaving se nazývá \textit{aspect weaver}.
 
 Alternativním způsobem návrhu informačních systémů, který staví na principech \gls{AOP},
 je Aspect-driven Design Approach\footnote{Autoři nejprve používali termín \textit{Aspect-Oriented
-Design Approach} (AODA), který byla později změněn. Oba tyto pojmy jsou vzájemně zaměnitelné.}
+Design Approach} (AODA), který byl později změněn. Oba tyto pojmy jsou vzájemně zaměnitelné.}
 (\gls{ADDA})~\cite{cemus2014aspect}, představený Karlem Čemusem v roce 2014.
 Tento přístup se zaměřuje na formalizaci jednotlivých komponent informačních systémů identifikování aspektů
 v informačních systémech a jejich separaci do jednoho bodu, tzv. \textit{single focal point}.
