--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -16,7 +16,8 @@ pro dosažen\'{\i} vytyčen\'ych c\'{\i}lů.
 
 \goal{Nástin formátu kapitoly}
 Jelikož vycházej\'{\i} implementace knihoven pro všechny platformy
-ze stejného návrhu, pop\'{\i}šeme si kompletn\'{\i} implementaci pro jazyk
+ze stejného návrhu představeného v předchozí kapitole~\ref{ch:navrh},
+pop\'{\i}šeme si kompletn\'{\i} implementaci pro jazyk
 Java a ostatn\'{\i} implementace shrneme komparativn\'{\i} metodou.
 
 \goal{Technické implementačn\'{\i} problémy}
