--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -151,7 +151,7 @@ Očekávají se cca 1 -- 2 odstavce, maximálně půl stránky.
 
 % pokud v práci nejsou obrázky nebo tabulky - odstraňte jejich seznam
 \listoffigures            % Obsah / Table of Contents
-%\listoftables            % Seznam tabulek / List of Tables
+\listoftables            % Seznam tabulek / List of Tables
 
 \renewcommand{\lstlistingname}{Zdrojový kód}
 \renewcommand{\lstlistlistingname}{Seznam zdrojových kódů}
