--- a/reference.bib
+++ b/reference.bib
@@ -704,24 +704,39 @@
 }
 
 @article{bernard2009jsr,
-    title={JSR 303: Bean validation},
-    author={Bernard, Emmanuel and Peterson, Steve},
-    journal={Bean Validation Expert Group, March},
-    year={2009}
+    title = {JSR 303: Bean validation},
+    author = {Bernard, Emmanuel and Peterson, Steve},
+    journal = {Bean Validation Expert Group, March},
+    year = {2009}
 }
 
 @book{scott2000programming,
-    title={Programming language pragmatics},
-    author={Scott, Michael Lee},
-    year={2000},
-    publisher={Morgan Kaufmann},
+    title = {Programming language pragmatics},
+    author = {Scott, Michael Lee},
+    year = {2000},
+    publisher = {Morgan Kaufmann},
     address = {Burlington, Massachusetts, USA},
 }
 
 @book{melichar2003jazyky,
-    title={Jazyky a p{\v{r}}eklady},
-    author={Melichar, Bo{\v{r}}ivoj},
-    year={2003},
-    publisher={Vydavatelstv{\'\i} {\v{C}}VUT},
+    title = {Jazyky a p { \v { r } } eklady},
+    author = {Melichar, Bo { \v { r } } ivoj},
+    year = {2003},
+    publisher = {Vydavatelstv { \'\i } { \v { C } } VUT},
     address = {Praha, Česká republika},
+}
+
+@book{beck2000extreme,
+    title = {Extreme programming explained: embrace change},
+    author = {Beck, Kent},
+    year = {2000},
+    publisher = {Addison-Wesley Professional},
+    address = {Boston, Massachusetts, USA},
+}
+
+@online{kiss,
+    key = {The Kiss Principle},
+    title = {The Kiss Principle},
+    url = {http://people.apache.org/~fhanik/kiss.html},
+    urldate = {2018-04-27}
 }
