--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -36,13 +36,25 @@ byznysové doméně, pro kterou by byl implementován systém využívající na
 
 \subsection{Integrace frameworku s uživatelským rozhraním}
 
-Autoři přístupu \gls{ADDA} již vyvinuli způsob, kterým lze integrovat vyhodnocování
+V sekci~\ref{sec:architecture} jsme nastínili způsob, jakým lze využívat náš framework.
+Jedním ze způsobů je integrace do uživatelského rozhraní. Autoři přístupu \gls{ADDA} již
+vyvinuli způsob, kterým lze integrovat vyhodnocování
 byznysových pravidel v uživatelském rozhraní~\cite{cemus2017separation}. Propojení s
 naším frameworkem by znamenalo pouze implementovat adaptér, který by převáděl námi
 použitou reprezentaci byznysového pravidla do podoby, kterou je schopen využívat
 aspect weaver v \gls{UI}. Tím by se rozšířila působnost našeho frameworku a zároveň
 by se zvýšil uživatelský komfort \gls{IS}, který framework využívá, díky real-time
 validaci vstupních hodnot formulářů.
+
+\subsection{Integrace frameworku s datovou vrstvou}
+
+Jak jsme také zmínili v sekci~\ref{sec:architecture}, integrace do datové vrstvy
+je také jednou z možností. Podobně jako v případě \gls{UI}, autoři přístupu
+\gls{ADDA} navrhují způsob, kterým lze automaticky distribuovat post-conditions
+do datové vrstvy transformováním jejich podmínek do výrazů v \gls{SQL}
+jazyce~\ref{cemus2015automated}. Aplikováním příslušného aspect weaveru by byl
+zvýšen dosah frameworku a byla by pokryta další oblast, ve které může docházet
+k manuální duplikaci byznysových pravidel.
 
 \section{Možnost\'{\i} uplatněn\'{\i} navrženého frameworku}
 
